--- a/agent-dashboard.html
+++ b/agent-dashboard.html
@@ -10,12 +10,12 @@
 <meta name="apple-mobile-web-app-title" content="OpenClaw">
 <meta name="theme-color" content="#06080e">
 <meta name="description" content="Glassmorphic agent management dashboard for OpenClaw with task kanban, document editor, API monitoring & real-time agent tracking.">
-<meta name="author" content="Abo-Elmakarem Shohoud">
+<meta name="author" content="Jony Jing">
 <meta property="og:title" content="OpenClaw Agent Dashboard">
 <meta property="og:description" content="Glassmorphic agent management dashboard for OpenClaw with task kanban, document editor, API monitoring & real-time agent tracking.">
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://github.com/karem505/openclaw-agent-dashboard">
-<meta property="og:image" content="https://raw.githubusercontent.com/karem505/openclaw-agent-dashboard/main/screenshots/tasks-kanban.png">
+<meta property="og:url" content="https://github.com/JonathanJing/jony-openclaw-dashboard">
+<meta property="og:image" content="https://raw.githubusercontent.com/JonathanJing/jony-openclaw-dashboard/main/screenshots/tasks-kanban.png">
 <script src="https://cdn.jsdelivr.net/npm/marked@14/marked.min.js"></script>
 <style>
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700;800&family=Space+Mono:wght@400;700&display=swap');
@@ -3904,8 +3904,8 @@ document.addEventListener('keydown', e => {
 });
 </script>
 <footer style="text-align:center;padding:24px 0 16px;color:#8b949e;font-size:0.85rem;font-family:'Outfit',sans-serif;">
-  Built by <a href="https://abo-elmakarem.netlify.app" target="_blank" style="color:#7c5cfc;text-decoration:none;">Abo-Elmakarem Shohoud</a> ·
-  <a href="https://github.com/karem505/openclaw-agent-dashboard" target="_blank" style="color:#8b949e;text-decoration:none;">GitHub</a>
+  Built by <a href="https://github.com/JonathanJing" target="_blank" style="color:#7c5cfc;text-decoration:none;">Jony Jing</a> ·
+  <a href="https://github.com/JonathanJing/jony-openclaw-dashboard" target="_blank" style="color:#8b949e;text-decoration:none;">GitHub</a>
 </footer>
 </body>
 </html>
